--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
-  <body>
+  <body ng-controller="AwesomeController">
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
